force-app/main/default/objects/GAP_Data__c/GAP_Data__c.object-meta.xml
<CustomObject>
    <description>[P2] I-Fresh 매출채권 분석용</description>
    <label>GAP 데이터</label>
    <nameField>
        <label>SQL Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>