force-app/main/default/objects/GAP_Data__c/fields/Desc__c.field-meta.xml
<CustomField>
    <fullName>Desc__c</fullName>
    <label>설명</label>
    <length>255</length>
    <type>Text</type>
</CustomField>