force-app/main/default/objects/GAP_Data__c/fields/Master_Table__c.field-meta.xml
<CustomField>
    <fullName>Master_Table__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Table</label>
    <referenceTo>GAP_Storage__c</referenceTo>
    <relationshipName>ASIS_Sql</relationshipName>
    <type>Lookup</type>
</CustomField>