force-app/main/default/objects/GAP_Data__c/fields/Namespace__c.field-meta.xml
<CustomField>
    <fullName>Namespace__c</fullName>
    <label>Namespace</label>
    <length>64</length>
    <type>Text</type>
</CustomField>