force-app/main/default/objects/GAP_Data__c/fields/Source_Desc__c.field-meta.xml
<CustomField>
    <fullName>Source_Desc__c</fullName>
    <label>소스 설명</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>