force-app/main/default/objects/GAP_Data__c/fields/SQL_ID__c.field-meta.xml
<CustomField>
    <fullName>SQL_ID__c</fullName>
    <label>SQL ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>