force-app/main/default/objects/GAP_Data__c/fields/Tables__c.field-meta.xml
<CustomField>
    <fullName>Tables__c</fullName>
    <label>Tables</label>
    <length>128</length>
    <type>Text</type>
</CustomField>