force-app/main/default/objects/GAP_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Source_Type__c</columns>
    <columns>Type__c</columns>
    <columns>NAME</columns>
    <columns>Namespace__c</columns>
    <columns>SQL_ID__c</columns>
    <columns>Master_Table__c</columns>
    <columns>Desc__c</columns>
    <columns>exID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>